--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,7 +1,3 @@
-header{
-	height: 60px;
-}
-
 @font-face {
 	font-family: 'Arial', sans-serif;
 	src: url(../fonts/Arialn.ttf);
@@ -208,7 +204,7 @@ button {
 	}
 }
 @media only screen and (max-width: 575px){
-	.whoflex-moto{
+	.whoflex-modal-hero{
 		display: none;
 	}
 }
@@ -250,6 +246,20 @@ button {
 }
 
 /* ######### Modal CSS ######### */
+.whoflex-modal-title{
+	font-size: 20px;
+	margin: 0 0 24px;
+}
+.whoflex-modal-title-sing-up{
+	margin-bottom: 32px;
+}
+@media only screen and (min-width: 575px) {
+	.whoflex-modal-title{
+		display: none;
+	}
+}
+
+
 .whoflex-signin-modal,
 .whoflex-signup-modal {
 	position: fixed;
@@ -266,9 +276,9 @@ button {
 }
 @media only screen and (max-width: 575px) {
 	.whoflex-signin-modal-content, .whoflex-signup-modal-content {
-		padding: 30px 15px;
+		padding: 125px 16px 30px;
 		width: 100%;
-		height: 100%;
+		height: auto;
 	}
 }
 .whoflex-modal-content, .whoflex-signup-modal-content {
@@ -324,7 +334,12 @@ button {
 .whoflex-signup-close-button:hover {
 	background-color: #eee;
 }
-
+@media only screen and (max-width: 575px) {
+	.whoflex-signin-show-modal,
+	.whoflex-signup-show-modal{
+		z-index: 100;
+	}
+}
 .whoflex-signin-show-modal,
 .whoflex-signup-show-modal {
 	opacity: 1;
@@ -332,6 +347,7 @@ button {
 	transform: scale(1);
 	transition: visibility 0s linear 0s, opacity 0.25s 0s, transform 0.25s;
 }
+
 
 /* ######### Input CSS ######### */
 .whoflex-label {
@@ -509,20 +525,22 @@ button {
 .signup-modal-right-container {
 	background-color: #fff;
 	width: 51%;
-	padding: 48px 54px 48px 42px;
 	border-top-right-radius: 10px;
 	border-bottom-right-radius: 10px;
 }
-
+@media only screen and (max-width: 575px) {
+	.signup-modal-right-container .mt-36{
+		margin: 0;
+	}
+}
+@media only screen and (min-width: 575px) {
+	.signup-modal-right-container{
+		padding: 48px 54px 48px 42px;
+	}
+}
 @media only screen and (max-width: 991px) {
 	.signup-modal-right-container {
 		width: auto;
-	}
-}
-
-@media only screen and (max-width: 480px) {
-	.signup-modal-right-container {
-		padding: 30px 15px;
 	}
 }
 
