--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -577,3 +577,61 @@ button {
 	font-size: 15px;
 	color: #999999;
 }
+
+/* ######### Instructor Application CSS ######### */
+@import "components/instructor-app";
+
+/* ######### Accordion CSS ######### */
+.whoflex-checkbox{
+	position: absolute;
+	z-index: -1;
+	opacity: 0;
+}
+.whoflex-checkbox+label {
+	display: inline-flex;
+	align-items: center;
+	user-select: none;
+}
+.whoflex-checkbox+label::before {
+	content: '';
+	display: inline-block;
+	width: 20px;
+	height: 20px;
+	flex-shrink: 0;
+	flex-grow: 0;
+	border: 1px solid #999999;
+	border-radius: 4px;
+	margin-right: 13px;
+	background-repeat: no-repeat;
+	background-position: center center;
+	background-size: 50% 50%;
+}
+.whoflex-checkbox:checked+label::before {
+	border-color: #DBBA74;
+	background-color: #DBBA74;
+	background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%23fff' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26 2.974 7.25 8 2.193z'/%3e%3c/svg%3e");
+}
+.whoflex-checkbox:checked+label{
+	font-weight: 700;
+}
+
+.whoflex-textarea{
+	box-sizing: border-box;
+	border: 1px solid #DDDDDD;
+	border-radius: 10px;
+	width: 100%;
+	min-height: 120px;
+	padding: 8px 15px 23px;
+	@include lg{
+		min-height: 150px;
+	}
+	&__wrap{
+		margin-bottom: 20px;
+
+		label{
+			display: block;
+			margin-bottom: 5px;
+		}
+	}
+}
+@import "components/accordion";
