--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -299,7 +299,7 @@ button {
 		padding: 48px 42px 43px;
 	}
 	.whoflex-signup-modal-content{
-		border-radius: 10px;
+		border-radius: 12px;
 	}
 }
 
@@ -487,7 +487,7 @@ select:-webkit-autofill:focus {
 /* ######### Sign Up CSS ######### */
 .signup-modal-container {
 	display: flex;
-	height: 642px;
+	height: 640px;
 }
 
 @media only screen and (max-width: 991px) {
@@ -499,6 +499,7 @@ select:-webkit-autofill:focus {
 .signup-modal-left-container {
 	width: 49%;
 	position: relative;
+	overflow: auto;
 }
 
 @media only screen and (max-width: 991px) {
