--- a/src/components/step-1.html
+++ b/src/components/step-1.html
@@ -1,4 +1,4 @@
-<div class="step step-1">
+<div class="step step-1 active">
     <h2 class="instructor-app__subtitle">1. Personal information</h2>
     <div>
         <div class="instructor-app__wrap-input">
