fixed step1 part2

--- a/src/components/step-1.html
+++ b/src/components/step-1.html
@@ -1,4 +1,4 @@
-<div class="step step-1">
+<div class="step wrap-step1">
     <h2 class="instructor-app__subtitle">1. Personal information</h2>
     <div>
         <div class="instructor-app__wrap-input">
@@ -13,7 +13,7 @@
             <span class="mt-8 d-block text-gray helper-text">Your email address will be used for your Whoflex Instructor Account login once your application is accepted.</span>
         </div>
         <div class="instructor-app__wrap-input">
-            <input class="whoflex-input" type="password" id="password" placeholder="Password*" onchange="checkPassValidation()" required/>
+            <input class="whoflex-input" type="password" id="password" placeholder="Password*" onkeydown="checkPassValidation()" required/>
             <span class="mt-8 d-block text-gray helper-text">
                 <span id="passHelpText">Your password must be at least 6 characters.</span>
                 The password will be used for your Whoflex Instructor Account login once your application is accepted.</span>
