--- a/src/components/step-3.html
+++ b/src/components/step-3.html
@@ -1,4 +1,4 @@
-<div class="step step-3">
+<div class="step wrap-step3">
     <h2 class="instructor-app__subtitle">3. Qualifications</h2>
     <div class="whoflex-textarea__wrap">
         <label for="other-topics">Are there any other topics not listed here that you are qualified to teach or to coach? (100 character limit)</label>
