--- a/src/components/step-2.html
+++ b/src/components/step-2.html
@@ -1,4 +1,4 @@
-<div class="step wrap-step2">
+<div class="step wrap-step2 active">
     <h2 class="instructor-app__subtitle">2. Topics</h2>
     <p class="instructor-app__description">Please select topics for your class or coaching. You can choose up to three topics in each field.</p>
 
