--- a/src/scss/components/instructor-app.scss
+++ b/src/scss/components/instructor-app.scss
@@ -31,6 +31,7 @@
       padding: 30px 36px 65px;
     }
     @include lg{
+      padding: 30px 56px 65px;
       max-width: 700px;
     }
   }
@@ -39,8 +40,11 @@
     font-size: 29px;
     line-height: 35px;
     font-weight: 400;
-    margin: 0 0 40px;
+    margin: 0 0 42px;
     color: #333333;
+    @include sm{
+      margin-bottom: 35px;
+    }
     @include lg {
       margin-bottom: 55px;
     }
@@ -56,6 +60,7 @@
     }
     @include lg{
       font-size: 20px;
+      margin-bottom: 17px;
     }
     &::before{
       position: absolute;
