--- a/src/scss/components/step.scss
+++ b/src/scss/components/step.scss
@@ -11,6 +11,13 @@
   }
   &-step2{
     margin-bottom: 30px;
+    .instructor-app__subtitle{
+      margin: 0 0 9px;
+      &::before{
+        content: none;
+      }
+
+    }
   }
   &-step3{
     margin-bottom: 30px;
@@ -41,6 +48,10 @@
         border-color: #000000;
         background-color: #000000;
       }
+      .whoflex-checkbox+label::before{
+        width: 20px;
+        height: 20px;
+      }
       .whoflex-checkbox:checked+label{
         font-weight: 400;
       }
@@ -59,10 +70,13 @@
     .instructor-app__wrapper{
       padding-bottom: 55px;
       @include lg{
-        padding-bottom: 68px;
+        padding: 30px 52.5px 68px;
       }
     }
     .instructor-app__buttons{
+      @include sm{
+        margin-bottom: 45px;
+      }
       @include lg{
         margin-bottom: 65px;
       }
@@ -71,7 +85,8 @@
   &2{
     .instructor-app__buttons{
       @include lg{
-        margin-bottom: 45px;
+        margin: 0 auto 45px;
+        max-width: 570px;
       }
     }
   }
@@ -79,6 +94,11 @@
     .instructor-app__buttons{
       @include lg{
         margin-bottom: 50px;
+      }
+    }
+    .instructor-app__wrapper{
+      @include lg{
+        padding: 30px 52.5px 65px;
       }
     }
   }
