--- a/src/scss/components/instructor-app.scss
+++ b/src/scss/components/instructor-app.scss
@@ -37,11 +37,14 @@
   }
 
   &__title {
-    font-size: 29px;
+    font-size: 27px;
     line-height: 35px;
     font-weight: 400;
     margin: 0 0 35px;
     color: #333333;
+    @include sm{
+      font-size: 29px;
+    }
     @include lg {
       margin-bottom: 55px;
     }
