--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -549,6 +549,7 @@ select:-webkit-autofill:focus {
 .signup-modal-left-container {
 	width: 49%;
 	position: relative;
+	overflow: hidden;
 }
 
 @media only screen and (max-width: 1200px) {
