--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -339,12 +339,15 @@ button {
 	cursor: pointer;
 	position: absolute;
 	right: 10px;
-	top: 15px;
+	top: 8px;
 	border: 2px solid transparent;
 	border-radius: 30px;
 	transition: 0.3s ease-in-out;
 	padding: 5px;
 	z-index: 1;
+	@include xs{
+		top: 10px;
+	}
 	@include sm{
 		top: 8px;
 	}
@@ -369,12 +372,15 @@ button {
 	cursor: pointer;
 	position: absolute;
 	right: 7px;
-	top: 15px;
+	top: 8px;
 	border: 2px solid transparent;
 	border-radius: 30px;
 	transition: 0.3s ease-in-out;
 	padding: 5px;
 	z-index: 1;
+	@include xs{
+		top: 10px;
+	}
 	@include sm{
 		top: 8px;
 	}
