--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -199,7 +199,7 @@ button {
 	max-width: 130px;
 	margin-bottom: 8px;
 }
-@media only screen and (min-width: 991px) {
+@media only screen and (min-width: $--sm) {
 	.whoflex-logo {
 		max-width: 200px;
 	}
@@ -307,18 +307,14 @@ button {
 	box-sizing: border-box;
 	background-color: white;
 }
-@media only screen and (min-width: $--sm) and (max-height: 800px) {
-	.whoflex-modal-content, .whoflex-signup-modal-content {
-		height: 500px;
-		overflow: auto;
-	}
-}
 @media only screen and (min-width: $--sm) {
 	.whoflex-modal-content, .whoflex-signup-modal-content {
 		position: absolute;
 		top: 50%;
 		left: 50%;
 		transform: translate(-50%, -50%);
+		max-height: 85vh;
+		overflow: auto;
 	}
 	.whoflex-modal-content{
 		border-radius: 0.5rem;
