change icons step2

--- a/src/components/step-3.html
+++ b/src/components/step-3.html
@@ -37,6 +37,7 @@
             <span class="input-file__button-text">Add file or drop file here</span>
         </label>
         <div class="upload-bottom d-none">
+            <button class="comment_delete" type="button"></button>
             <button class="tryAgain" type="button">Try again</button>
         </div>
     </div>
