--- a/src/scss/components/instructor-app.scss
+++ b/src/scss/components/instructor-app.scss
@@ -22,7 +22,7 @@
   &__hero{
     width: 100%;
     text-align: center;
-    padding: 20px;
+    padding: 20px 0 10px;
     background: #FFFFFF;
     box-shadow: 0 4px 4px rgba(0, 0, 0, 0.1);
     @include lg{
