--- a/src/components/step-1.html
+++ b/src/components/step-1.html
@@ -8,7 +8,7 @@
             <input class="whoflex-input" type="text" id="lastName" placeholder="Last Name*" required/>
         </div>
         <div class="instructor-app__wrap-input">
-            <input class="whoflex-input" type="email" id="email" placeholder="Email*" onchange="checkEmailValidation()" required/>
+            <input class="whoflex-input" type="email" id="email" placeholder="Email*" onkeyup="checkEmailValidation()" required/>
             <span class="mt-8 text-red helper-text" id="error-message">Please enter a valid email</span>
             <span class="mt-8 d-block text-gray helper-text">Your email address will be used for your Whoflex Instructor Account login once your application is accepted.</span>
         </div>
