--- a/src/scss/components/instructor-app.scss
+++ b/src/scss/components/instructor-app.scss
@@ -25,7 +25,7 @@
     padding: 20px 0 10px;
     background: #FFFFFF;
     box-shadow: 0 4px 4px rgba(0, 0, 0, 0.1);
-    @include lg{
+    @include sm{
       box-shadow: none;
       text-align: left;
       background: transparent;
@@ -49,10 +49,13 @@
     box-sizing: border-box;
     @include sm{
       padding: 30px 36px 65px;
+      max-width: 700px;
+      height: auto;
+      margin-bottom: 80px;
     }
     @include lg{
       padding: 30px 56px 65px;
-      min-width: 700px;
+      margin-bottom: 100px;
     }
   }
 
