fixed pass stars

--- a/src/scss/components/instructor-app.scss
+++ b/src/scss/components/instructor-app.scss
@@ -17,6 +17,10 @@
 
     &::placeholder {
       color: #999999;
+      font-size: 16px !important;
+      @include sm{
+        font-size: 18px !important;
+      }
     }
   }
   &__hero{
