fixed font size stars

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -36,6 +36,7 @@ input[type="password"] {
 	transition: none;
 	line-height: 1.3rem;
 	font-family: "passstar", sans-serif;
+	font-size: 17px !important;
 }
 input.fs10{
 	&[type="password"] {
@@ -333,6 +334,9 @@ button {
 .whoflex-modal-content, .whoflex-signup-modal-content {
 	box-sizing: border-box;
 	background-color: white;
+	input[type="password"] {
+		font-size: 12px !important;
+	}
 }
 @media only screen and (min-width: $--sm) {
 	.whoflex-signin-modal, .whoflex-signup-modal{
