fixed hover for mobile

--- a/src/scss/components/accordion.scss
+++ b/src/scss/components/accordion.scss
@@ -114,8 +114,10 @@
       label{
         transition: .4s;
         &:hover{
-          cursor: pointer;
-          color: #E0C463;
+          @include lg{
+            cursor: pointer;
+            color: #E0C463;
+          }
         }
       }
     }
